
[package]
name = "http-server-rust"
version = "0.1.0"
authors = [
  "Codecrafters <hello@codecrafters.io>",
  "Saurabh Kumar <sksaurabhkumar009@gmail.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.38"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.11.0"                                # General iterator helpers
flate2 = "1.0.30"
hex = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.3.0" # nicer looking assertions
